@@ -1,3 +1,10 @@
+2006-12-25  Daniel Borgmann  <daniel.borgmann@gmail.com>
+
+	* engines/lua/src/lua_style.c: (lua_style_push_widget_params),
+	(lua_style_draw), (lua_style_draw_shadow), (lua_style_draw_box),
+	(lua_style_draw_check):
+	- Minor refactoring, add list view header support.
+
 2006-12-23  Benjamin Berg  <benjamin@sipsolutions.net>
 
 	* engines/clearlooks/src/clearlooks_draw.c:
